--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,24 @@
 
 /* components */
 @import "components/suatus-bar.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/badge.css";
+@import "components/user-component.css";
+@import "components/point.css";
 
 /* screens */
-@import "screens/login.css";
 
-body {
+@import "screens/login.css";
+@import "screens/friends.css";
+@import "screens/find.css";
+
+s body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.main-screen {
+  padding: 0 25px;
+  margin-top: 120px;
 }
