--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,22 +1,3 @@
-.find-icons {
-  display: flex;
-  justify-content: space-around;
-  padding: 16px;
-  padding-top: 25px;
-}
-.find-icons__icon {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.find-icons__icon i {
-  font-size: 35px;
-}
-
-.find-icons__icon span {
-  margin-top: 10px;
-}
 .recommended-friends {
   border-top: var(--main-border);
   border-bottom: var(--main-border);
@@ -103,4 +84,24 @@
 }
 .open-post__heart-count span {
   margin-left: 3px;
+}
+
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.open-post__heart-count:hover i {
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
 }
