--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,21 @@
 @import "components/suatus-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/alt-screen-header.css";
 @import "components/badge.css";
 @import "components/user-component.css";
 @import "components/point.css";
+@import "components/icon-raw.css";
+@import "components/no-mobile.css";
 
 /* screens */
 
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
 
 s body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
